# BrainFoamKit

./: .cz.toml  .gitignore  .gitleaksignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  .yamlfmt  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  REUSE.toml  about.toml  bacon.toml  deny.toml  licenses_report.json  licenses_report.md  nextest.toml  renovate.json  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yaml  build_container.yaml  ci.yaml  code_coverage.yaml  deploy-mdbook.yaml  deploy_mdbook.yaml  get-next-version.yaml  get_next_version.yaml  release.yaml  release_upload.yaml  upload_binaries.yaml
guide/: book.toml
guide/src/: README.md  SUMMARY.md  getting_started.md  preface.md
guide/src/bfk/: README.md
guide/src/bfkrun/: README.md  placeholder.md
guide/src/bfkview/: README.md
guide/src/language_changes/: README.md  design-decisions.md  design-goals.md  ebnf-grammar.md  language-semantics.md  language-syntax.md
guide/src/language_implementation/: README.md  basic_structs.md  interpreter.md  parser.md  virtual_machine.md
guide/src/language_implementation.md/: README.md
guide/src/language_reference/: README.md  background.md  ebnf-grammar.md  language-semantics.md
lang/: README.md  grammar.ebnf  railroad.md
meta/: LICENSE-HEADER  licenses.hbs  licenses.html  licenses.json
scripts/: build.sh  generate_about_json.sh  generate_about_md.sh
src/brainfoamkit/: main.rs
src/brainfoamkit_interpreter/: main.rs
src/brainfoamkit_lib/: ascii_char.rs  ascii_table.rs  bit.rs  byte.rs  instruction.rs  iterable_byte.rs  iterable_nybble.rs  lib.rs  machine.rs  machine_builder.rs  nybble.rs  program.rs  vm_reader.rs
src/brainfoamkit_visualizer/: input_handling.rs  layout.rs  main.rs  utilities.rs
