[package]
name = "brainfoamkit"
version = "1.0.0-alpha.9"
edition = "2021"
readme = "README.md"
description = "An interpreter for the brainf*** language"
rust-version = "1.70.0"
repository = "https://github.com/AliSajid/brainfoamkit"
license = "MIT OR Apache-2.0"

[lib]
name = "brainfoamkit_lib"
path = "src/brainfoamkit_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "bfkview"
path = "src/brainfoamkit_visualizer/main.rs"

[[bin]]
name = "bfkrun"
path = "src/brainfoamkit_interpreter/main.rs"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
crossterm = "0.27.0"
prettytable-rs = "0.10.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
