[package]
name = "brainfoamkit"
version = "1.0.0-alpha.14"
edition = "2021"
readme = "README.md"
description = "An interpreter for the brainf*** language"
rust-version = "1.70.0"
repository = "https://github.com/AliSajid/brainfoamkit"
license = "MIT OR Apache-2.0"

[lib]
name = "brainfoamkit_lib"
path = "src/brainfoamkit_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "bfkview"
path = "src/brainfoamkit_visualizer/main.rs"

[[bin]]
name = "bfkrun"
path = "src/brainfoamkit_interpreter/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
crossterm = "0.27.0"
prettytable-rs = "0.10.0"
ratatui = { version = "0.25.0", features = ["macros", "serde", "document-features"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.9.0"
