# SPDX-FileCopyrightText: 2023 - 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "brainfoamkit"
version = "1.1.0-next.2"
edition = "2021"
readme = "README.md"
description = "An interpreter for the brainf*** language"
rust-version = "1.70.0"
repository = "https://github.com/AliSajid/brainfoamkit"
license = "MIT OR Apache-2.0"

[lib]
name = "brainfoamkit_lib"
path = "src/brainfoamkit_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "bfkview"
path = "src/brainfoamkit_visualizer/main.rs"

[[bin]]
name = "bfkrun"
path = "src/brainfoamkit_interpreter/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
crossterm = "0.27.0"
prettytable-rs = "0.10.0"
ratatui = { version = "0.27.0", features = ["macros", "serde", "document-features"] }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.9.0"

# Dependencies needed to build the book
# mdbook ~ "0.4.36"
# mdbook-inline-highlighting = "0.1.0"
# mdbook-plantuml = "0.8.0"
